--- a/crates/cmd/Cargo.toml
+++ b/crates/cmd/Cargo.toml
@@ -5,5 +5,6 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-ioc_core = { workspace = true }
+ioc = { workspace = true }
+linkme = { workspace = true }
 a = { workspace = true }
