--- a/libs/ioc_macros/Cargo.toml
+++ b/libs/ioc_macros/Cargo.toml
@@ -13,4 +13,6 @@ quote = { workspace = true }
 syn = { workspace = true }
 thiserror = { workspace = true }
 darling = { workspace = true }
+proc-macro-crate = "3.4.0"
+prettyplease = "0.2.37"
 
