--- a/crates/mvc/Cargo.toml
+++ b/crates/mvc/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "a"
+name = "mvc"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
-ioc = { workspace = true }
-linkme = { workspace = true }
-b = { workspace = true }
