--- a/examples/cmd/Cargo.toml
+++ b/examples/cmd/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "b"
+name = "cmd"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -7,3 +7,4 @@ license.workspace = true
 [dependencies]
 ioc = { workspace = true }
 linkme = { workspace = true }
+a = { path = "../a" }
